# cartos

./: Cargo.toml  Dockerfile.rust.build.arm64  Dockerfile.rust.buildrun.arm64  LICENSE  Makefile  README.md
app/: Cargo.toml
app/src/: main.rs
backend/: .dockerignore  .gitignore  Cargo.toml  Makefile
backend/app/: Cargo.toml
backend/app/src/: main.rs
backend/common/: Cargo.toml
backend/common/src/: lib.rs
backend/common/src/hw/: gpio.rs
backend/common/src/types/: card.rs  channels.rs  database.rs  general.rs  mod.rs  websockets.rs
backend/common/src/utils/: load_env.rs  mod.rs  perform_reset_with_usb_unplug.rs  utf_32_to_8_conversion.rs
backend/db/: Cargo.toml
backend/db/src/: connection.rs  initialize_db.rs  lib.rs
backend/migrations/: 001_initial_db.sql  002_add_test_column.sql  003_remove_test_column.sql
backend/reader/: Cargo.toml
backend/reader/src/core/: commands.rs  connect.rs  mod.rs
backend/reader/src/core/commands/: mod.rs  read_serial_number_module.rs
backend/server/: Cargo.toml
backend/server/src/: create_routes.rs  lib.rs  rest.rs  websocket.rs  websocket_clients.rs
backend/server/src/routes/: mod.rs
backend/server/src/routes/log/: get_all.rs  mod.rs  view_all.rs  view_single_email.rs
backend/server/src/routes/system/: mod.rs  restart_service.rs
backend/server/src/routes/user/: add.rs  mod.rs  update_by_id.rs  view_all.rs  view_single_card_serial_number.rs  view_single_email.rs
bruno_api_test/: add_single_use.bru  bruno.json  restart_service.bru  view_all_logs.bru  view_all_users.bru  view_single_log_by_card_serial_number.bru  view_single_log_by_email.bru  view_single_user_by_email.bru  view_single_user_by_serial_card_number.bru
common/: Cargo.toml
common/src/utils/: handle_tokio_result.rs  mod.rs
db/: Cargo.toml
db/src/: lib.rs
frontend/: .env.example  .gitignore  README.md  bun.lockb  eslint.config.js  package.json  react-router.config.ts  server-ssr.js  server.js  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  catchall.tsx  root.tsx  routes.ts
frontend/src/components/: layout.tsx  navigation.tsx  space.tsx
frontend/src/components/hw/: system_restart.tsx
frontend/src/components/logs/: columns.tsx  table-component.tsx
frontend/src/components/ui/: button.tsx  input.tsx  table.tsx
frontend/src/components/users/: columns.tsx  data-table.tsx  table-component.tsx
frontend/src/components/users/editForm/: formComponents.tsx
frontend/src/components/websockets/: displayer.tsx
frontend/src/lib/: useApiUrl.ts  websockets.ts
frontend/src/pages/: _index.tsx  about.tsx  logs.tsx
frontend/src/pages/about/: route.tsx
frontend/src/pages/logs/: route.tsx
frontend/src/pages/users._index/: route.tsx
frontend/src/pages/users.edit/: route.tsx
frontend/src/pages/users.new/: route.tsx
frontend/src/pages/wbs._index/: route.tsx
reader/: Cargo.toml
reader/src/core/: commands.rs  connect.rs
service/: install.sh  install_requirements.sh  logs.sh  reload_wifi.sh
