[package]
name = "app"
version = "0.0.1"
edition = "2021"
authors = ["Petr Zakopal <info@petrzakopal.cz>"]
readme = "README.md"
homepage = "petrzakopal.com"
repository = "https://github.com/petrzakopal/cartos"
keywords = ["utilities", "nfc"]

[dependencies]
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
dotenv = "0.15.0"
tokio = { version = "1.36.0", features = ["full"] }
reader = { path= "../reader"}
common = { path= "../common"}
db = { path= "../db"}
server = { path= "../server"}
