[package]
name = "common"
version = "0.0.1"
edition = "2021"
authors = ["Petr Zakopal <info@petrzakopal.cz>"]
homepage = "petrzakopal.com"

[dependencies]
tracing = "0.1.40"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.36.0", features = ["full"] }
dotenv = "0.15.0"
chrono = {version = "0.4.39", features = ["serde"]}
sqlx = { version = "0.8", features = ["sqlite" ,"runtime-tokio", "tls-native-tls" ] }
axum = {version = "0.7.7", features= ["ws"]}
