[package]
name = "db"
version = "0.0.1"
edition = "2021"
authors = ["Petr Zakopal <info@petrzakopal.cz>"]
homepage = "petrzakopal.com"

[dependencies]
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
common = { path= "../common"}
