[package]
name = "reader"
version = "0.0.1"
edition = "2021"
authors = ["Petr Zakopal <info@petrzakopal.cz>"]
homepage = "petrzakopal.com"

[dependencies]
pcsc = "2.8.2"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
common = { path= "../common"}
