[package]
name = "server"
version = "0.0.1"
edition = "2021"
authors = ["Petr Zakopal <info@petrzakopal.cz>"]
homepage = "petrzakopal.com"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
common = { path= "../common"}
axum = {version = "0.7.7", features= ["ws"]}
axum-server = "0.7.1"
serde = "1.0.210"
serde_json = "1.0.128"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors", "fs", "trace"] }
owo-colors = "4.1.0"
sqlx = { version = "0.8", features = ["sqlite" ,"runtime-tokio", "tls-native-tls" ] }
axum-extra = {version = "0.9.6", features = ["typed-header"]}
futures = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
uuid = { version = "1.0", features = ["v4"] }
